--- a/less/home-page.less
+++ b/less/home-page.less
@@ -34,6 +34,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media @mobile {
+      text-align: center;
+    }
+
+
   }
 
    
@@ -44,6 +50,7 @@
 
       @media @mobile {
         width: 100%;
+        padding-right: 0%;
       }
     }
 
@@ -53,6 +60,7 @@
 
       @media @mobile {
         width: 100%;
+        padding-left: 0%;
       }
 
       img {
@@ -65,14 +73,30 @@
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
+    @media @mobile {
+      flex-direction: column-reverse;
+      margin: 0 auto;
+      
+    }
+
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile {
+        width: 100%;
+        padding-left: 0%;
+      }
     }
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+
+      @media @mobile {
+        width: 100%;
+        padding-right: 0%;
+      }
     }
   }
 
@@ -82,6 +106,7 @@
 
     @media @mobile {
       width: 100%;
+      padding: 0 2%;
     }
 
     img {
@@ -106,8 +131,8 @@
 
     @media @mobile {
       max-width: 500px;
-      .flex-jc-al(center, center);
       flex-direction: column;
+      align-items: center;
   
     }
 
@@ -117,9 +142,7 @@
 
       @media @mobile {
         width: 80%;
-        .flex-jc-al(center, center);
         flex-direction: column;
       }
     }
-  }
 }// home
